<resources>
    <string name="app_name">Traveling companion</string>
    <string name="received_sms_sender_and_body">SMS received from %1$s.\n%2$s</string>
    <string name="received_sms_sender">SMS received from %1$s.</string>
    <string name="received_sms_body">SMS received: %1$s.</string>
    <string name="received_sms">SMS received</string>
    <string name="phone_call_format">Incoming phone call from %1$s</string>
    <string name="time_announce">It is %1$s.</string>
    <string name="ask_for_permissions">Traveling companion needs permission to access your phone:\n-receive sms and phone calls\n-access to your contacts\n-send sms</string>
    <string name="missing_permissions">Missing permissions</string>
    <string name="grant_permissions_button">Grant permissions</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="next_alarm_ui">Next alarme %1$s</string>
    <string name="sms_answer">Thank you for your message. I cannot answer now. I will answer your message as soon as possible</string>
    <string name="call_answer">Thank you for your call. I cannot answer now. I will answer your call as soon as possible</string>
    <string name="ui_hour">Hours</string>
    <string name="ui_half">Half</string>
    <string name="ui_quarter">Quarter</string>
    <string name="deactivated">Disabled</string>
    <string name="received_gmail">New mail received from %1$s, %2$s</string>
    <string name="received_gmail_null">New mail received</string>
    <string name="besoin_accord_notification_listener">You need to grant permission to intercept messages from this application. The system settings screen will be displayed. Please check the option corresponding to Traveling Companion. Press Cancel if you do no want to grant permissions.</string>

    <string name="received_autre_appli_nom">Notification from %1$s. </string>

    <string name="permissions_sms">You must grant this application the rights to access you SMS and contacts</string>
    <string name="permissions_alarme">You must grant this application the rights to schedule alarms</string>
    <string name="permissions_telephone">You must grant this application the rights to access you phone and contacts</string>
    <string name="ui_sms_reponse_auto">SMS: réponse automatique</string>
    <string name="ui_parametres_telephone">Phone Parameters</string>
    <string name="ui_annoncer_les_appels">Announce phone calls</string>
    <string name="ui_toujours">Always</string>
    <string name="ui_contacts_seulement">Contacts only</string>
    <string name="ui_parametres_horloge">Clock parameters</string>
    <string name="ui_annoncer_l_heure">Hour announce:</string>
    <string name="sms_copyright_reponse_automatique">\n(Message automatically sent by Traveling Companion ©2019 Lucien Pilloni)</string>
    <string name="ui_a_propos_icones">Icons from https://materialdesignicons.com/</string>
    <string name="ui_a_propos_code">Some code from https://stackoverflow.com/</string>
    <string name="ui_horloge">Clock:</string>
    <string name="ui_messages">Messages:</string>
    <string name="ui_appels">Calls:</string>
    <string name="ui_horl">Clock</string>
    <string name="ui_sms">Sms</string>
    <string name="ui_emails">Mails</string>
    <string name="ui_phone">Phone</string>
    <string name="ui_volume">Volume</string>
    <string name="ui_parametres">Parameters</string>
    <string name="ui_volume_defaut">System default volume</string>
    <string name="ui_apres_demarrage">After a restart, reactivate the Companion if it whas activated</string>
    <string name="ui_reactivate_after_restart">Reactivate if the companion whas active before restart</string>
    <string name="ui_notifications">Notifications</string>
    <string name="menu_parametres">Parameters</string>
    <string name="menu_tts">Text to speech synthesis</string>
    <string name="menu_apropos">About…</string>
    <string name="menu_report">Report</string>
    <string name="menu_notifications">Notification access permissions</string>
    <string name="ui_notidication_sound">Notification sound:</string>
    <string name="ui_other_applications">Other applications</string>
    <string name="menu_notification_log">Notification log</string>
    <string name="pas_encore_de_notifications">No notification yet</string>
    <string name="effacer_notifications">Delete notification log?</string>
    <string name="working_please_wait">Please wait</string>
    <string name="ui_application">Application</string>
    <string name="ui_titre">Title</string>
    <string name="contenu">Content</string>
    <string name="ui_autres_applications">Other application settings</string>
    <string name="ui_annoncer_les_notifications_pour_ces_applications">Announce notifications for these applications:</string>
    <string name="param_tres_emails">EMails parameters</string>
    <string name="ui_annoncer_le_titre">Announce title</string>
    <string name="ui_annoncer_le_contenu">Announce content</string>
    <string name="ui_annoncer_les_sms">Announce SMS</string>
    <string name="ui_annoncer_l_exp_diteur">Announce sender</string>
    <string name="ui_reponse_automatique">Automatic answer:</string>
    <string name="ui_jamais">Never</string>
    <string name="browse_genre_subtitle">Genres</string>
    <string name="browse_genres">genres</string>

    <string name="received_whatsapp">WhatsApp message received from %1$s, %2$s</string>
    <string name="received_whatsapp_null">WhatsApp message received</string>
    <string name="ui_annoncer_expediteur_whatsapp">Say sender name if available</string>
</resources>
