<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marge_ecran_parametre"
    android:orientation="vertical"
    android:padding="@dimen/marge_ecran_parametre">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_clock"
        android:drawableTint="@color/Accent"
        android:text="@string/ui_parametres_horloge"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_annoncer_l_heure" />

    <RadioGroup
        android:id="@+id/radiogroupAnnonceHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marge_categories"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonAnnonceHeure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ui_hour" />

        <RadioButton
            android:id="@+id/radioButtonAnnonceDemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ui_half" />

        <RadioButton
            android:id="@+id/radioButtonAnnonceQuart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ui_quarter" />

    </RadioGroup>
</LinearLayout>