<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/marge_ecran_parametre">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/Accent"
        android:text="@string/param_tres_emails"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <CheckBox
        android:id="@+id/checkBoxExpediteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_annoncer_le_titre" />

    <CheckBox
        android:id="@+id/checkBoxSujet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_annoncer_le_contenu" />

</LinearLayout>