<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marge_ecran_parametre"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fond_bouton"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonActiver"
            android:layout_width="@dimen/taille_bouton"
            android:layout_height="@dimen/taille_bouton"
            android:background="#0000"
            android:scaleType="fitCenter"
            android:tintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icplaycircle" />

        <ImageButton
            android:id="@+id/imageButtonDesactiver"
            android:layout_width="@dimen/taille_bouton"
            android:layout_height="@dimen/taille_bouton"
            android:background="#0000"
            android:scaleType="fitCenter"
            android:tintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icstopcircle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_categories">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ui_horloge"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_toggle"
                android:text="@string/ui_horl"
                app:layout_constraintBottom_toBottomOf="@+id/switchHorloge"
                app:layout_constraintStart_toEndOf="@+id/switchSMS"
                app:layout_constraintTop_toTopOf="@+id/switchHorloge" />

            <Switch
                android:id="@+id/switchHorloge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clock"
                android:drawableTint="@color/Primary"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButtonSettingsHorloge" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ui_messages"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchHorloge" />

            <Switch
                android:id="@+id/switchSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_message"
                android:drawableTint="@color/Primary"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonSettingsSMS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButtonSettingsSMS" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_sms"
                app:layout_constraintBottom_toBottomOf="@+id/switchSMS"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/switchSMS" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                android:padding="@dimen/marge_ecran_parametre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchSMS" />

            <Switch
                android:id="@+id/switchEMails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawableTint="@color/Primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_emails"
                app:layout_constraintBottom_toBottomOf="@+id/switchEMails"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/switchEMails" />

            <Switch
                android:id="@+id/switchWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_whatsapp"
                android:drawableTint="@color/Primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                android:padding="@dimen/marge_ecran_parametre"
                app:layout_constraintTop_toBottomOf="@+id/switchEMails" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_whatsapp"
                app:layout_constraintBottom_toBottomOf="@+id/switchWhatsApp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/switchWhatsApp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ui_appels"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchWhatsApp" />

            <Switch
                android:id="@+id/switchTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableTint="@color/Primary"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonSettingsTelephone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButtonSettingsTelephone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_phone"
                app:layout_constraintBottom_toBottomOf="@+id/switchTelephone"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/switchTelephone" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                android:padding="@dimen/marge_ecran_parametre"
                app:layout_constraintTop_toBottomOf="@+id/switchTelephone" />

            <Switch
                android:id="@+id/switchAppelWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_whatsapp"
                android:drawableTint="@color/Primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_whatsapp_calls"
                app:layout_constraintBottom_toBottomOf="@+id/switchAppelWhatsApp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/switchAppelWhatsApp" />

            <ImageButton
                android:id="@+id/imageButtonSettingsHorloge"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:layout_marginTop="@dimen/espace_premier_item"
                android:layout_marginEnd="@dimen/ecart_bouton_droite"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:srcCompat="@drawable/ic_cog" />

            <ImageButton
                android:id="@+id/imageButtonSettingsSMS"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:layout_marginTop="@dimen/espace_premier_item"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/ic_cog" />

            <ImageButton
                android:id="@+id/imageButtonSettingsEMails"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintBottom_toBottomOf="@+id/switchEMails"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintTop_toTopOf="@+id/switchEMails"
                app:srcCompat="@drawable/ic_cog" />

            <ImageButton
                android:id="@+id/imageButtonSettingsWhatsAppMessages"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintBottom_toBottomOf="@+id/switchWhatsApp"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintTop_toTopOf="@+id/switchWhatsApp"
                app:srcCompat="@drawable/ic_cog" />

            <ImageButton
                android:id="@+id/imageButtonSettingsTelephone"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:layout_marginTop="@dimen/espace_premier_item"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:srcCompat="@drawable/ic_cog" />

            <ImageButton
                android:id="@+id/imageButtonSettingsWhatsAppAppel"
                android:layout_width="@dimen/taille_bouton_settings"
                android:layout_height="@dimen/taille_bouton_settings"
                android:background="@drawable/ripple_effect"
                android:scaleType="fitCenter"
                android:tint="@color/Accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintStart_toStartOf="@+id/imageButtonSettingsHorloge"
                app:layout_constraintTop_toTopOf="@+id/switchAppelWhatsApp"
                app:srcCompat="@drawable/ic_cog" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>